@@ -7,7 +7,8 @@ use My::Build::Utility qw(awx_arch_dir awx_install_arch_dir);
 our $WX_CONFIG_LIBSEP;
 our @LIBRARIES = qw(base net xml adv animate aui core fl gizmos
                     gl html media qa richtext stc xrc);
-our @MONO_LIBRARIES = qw(core gl);
+our @MONO_LIBRARIES_2_9 = qw(core gl);
+our @MONO_LIBRARIES_2_8 = qw(core stc gl);
 our @CONTRIB_LIBRARIES = qw(gizmos_xrc ogl plot svg);
 our @CRITICAL  = qw(base core);
 our @IMPORTANT = qw(net xml adv aui gl html media richtext stc xrc);
